# ppt-agent-main

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  summary报错修复记录.md  vite.config.ts  启动与排查记录.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: outline.py  pages.py  projects.py  requirements.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: __init__.py  base.py  entities.py  types.py
backend/app/schemas/: api.py
backend/app/services/: background.py  events.py  generation.py  mcp_gateway.py  model_gateway.py  orchestrator.py  prompt_contracts.py  research.py
docs/: 01-project-workspace.md  02-project-init.md  03-knowledge-research.md  04-outline.md  05-page-draft.md  06-svg-design.md  07-agent-orchestration.md  08-backend-technical-roadmap.md  09-mcp-test-deployment.md  README.md  final-target-agent-workflow.md
docs/images/: 介绍一下dify.pptx
src/: App.tsx  index.html  package.json
src/components/: AgentActivity.tsx  Editor.tsx  Home.tsx  ProjectStart.tsx
src/components/editor/: EditorBits.tsx  PresentationPlayer.tsx  StoryboardPanel.tsx
src/lib/: ppt-api.ts  single-flight.ts  workflow-ui.ts
static/src/: App.tsx  index.css
static/src/components/: Editor.tsx  Home.tsx  ProjectStart.tsx
